@@ -3495,6 +3495,9 @@ if (stream->type==STREAMTYPE_DVDNAV && dvd_nav_still)
     case MP_CMD_GET_PERCENT_POS : {
 	mp_msg(MSGT_GLOBAL,MSGL_INFO,MSGTR_AnsPercentPos, demuxer_get_percent_pos(demuxer));
     } break;
+    case MP_CMD_SWITCH_AUDIO :
+        demuxer_switch_audio(demuxer);
+        break;
     case MP_CMD_RUN : {
 #ifndef __MINGW32__
         if(!fork()) {
